compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__unused_block_wrapping_pure_expressions.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\npub fn main() {\n  {\n    True\n    1\n  }\n  Nil\n}\n"
---
----- SOURCE CODE

pub fn main() {
  {
    True
    1
  }
  Nil
}


----- WARNING
warning: Unused value
  ┌─ /src/warning/wrn.gleam:3:3
  │  
3 │ ╭   {
4 │ │     True
5 │ │     1
6 │ │   }
  │ ╰───^ This value is never used


warning: Unused value
  ┌─ /src/warning/wrn.gleam:4:5
  │
4 │     True
  │     ^^^^ This value is never used
