compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__unused_float.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "pub fn main() { 1.0 2 }"
---
----- SOURCE CODE
pub fn main() { 1.0 2 }

----- WARNING
warning: Unused literal
  ┌─ /src/warning/wrn.gleam:1:17
  │
1 │ pub fn main() { 1.0 2 }
  │                 ^^^ This value is never used

Hint: You can safely remove it.
