compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__unused_fn_function_call.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\npub fn main() {\n    fn(a) { a + 1 }(1)\n    Nil\n}\n"
---
----- SOURCE CODE

pub fn main() {
    fn(a) { a + 1 }(1)
    Nil
}


----- WARNING
warning: Unused value
  ┌─ /src/warning/wrn.gleam:3:5
  │
3 │     fn(a) { a + 1 }(1)
  │     ^^^^^^^^^^^^^^^^^^ This value is never used
