compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__unused_int_negation_raises_a_warning.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\npub fn main() {\n  -1\n  1\n}\n"
---
----- SOURCE CODE

pub fn main() {
  -1
  1
}


----- WARNING
warning: Unused literal
  ┌─ /src/warning/wrn.gleam:3:3
  │
3 │   -1
  │   ^^ This value is never used

Hint: You can safely remove it.
