compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__unused_module_select_constructor_call.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\nimport wibble\n\npub fn main() {\n  wibble.Wibble(1)\n  1\n}\n"
---
----- SOURCE CODE

import wibble

pub fn main() {
  wibble.Wibble(1)
  1
}


----- WARNING
warning: Unused value
  ┌─ /src/warning/wrn.gleam:5:3
  │
5 │   wibble.Wibble(1)
  │   ^^^^^^^^^^^^^^^^ This value is never used
