compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__unused_module_wuth_alias_warning_test.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: import gleam/wibble as wobble
---
----- SOURCE CODE
import gleam/wibble as wobble

----- WARNING
warning: Unused imported module
  ┌─ /src/warning/wrn.gleam:1:1
  │
1 │ import gleam/wibble as wobble
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ This imported module is never used

Hint: You can safely remove it.
