compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__unused_pipeline_ending_with_pure_fn.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\npub fn main() {\n    1\n    |> fn(n) { n + 1 }\n\n    Nil\n}\n"
---
----- SOURCE CODE

pub fn main() {
    1
    |> fn(n) { n + 1 }

    Nil
}


----- WARNING
warning: Unused value
  ┌─ /src/warning/wrn.gleam:3:5
  │  
3 │ ╭     1
4 │ │     |> fn(n) { n + 1 }
  │ ╰──────────────────────^ This value is never used
